Parse bool correctly

--- a/config/index.html
+++ b/config/index.html
@@ -103,7 +103,7 @@
 
     // Load any previously saved configuration, if available
     if(localStorage['high_contrast']) {
-      highContrastCheckbox.checked = Boolean(localStorage['high_contrast']);
+      highContrastCheckbox.checked = JSON.parse(localStorage['high_contrast']);
       backgroundColorPicker.value = localStorage['background_color'];
     }
   })();
