--- a/config/index.html
+++ b/config/index.html
@@ -35,7 +35,7 @@
         </label>
       </div>
       <div class='item-container-footer'>
-        Choose the app's background color. Used if High Contrast Mode is not selected.
+        Choose the app's background color. Used if High Contrast Mode is not selected. Note: Only available on Basalt watches that support many colors.
       </div>
     </div>
 
