--- a/config/index.html
+++ b/config/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Slate Example Config Page</title>
+  <title>Slate Example Configuration</title>
   <link rel='stylesheet' type='text/css' href='css/slate.min.css'>
   <script src='js/slate.min.js'></script>
   <style>
@@ -11,12 +11,14 @@
     font-family: 'PT Sans', sans-serif;
     font-size: 1.2em;
     font-weight: 500;
+    color: #888888;
+    text-align: center;
   }
   </style>
   </head>
 
   <body>
-    <h1 class='title'>Slate Example Config Page</h1>
+    <h1 class='title'>Slate Example Configuration</h1>
 
     <div class='item-container'>
       <div class='item-container-content'>
