--- a/config/index.html
+++ b/config/index.html
@@ -56,7 +56,7 @@
 
     <div class='item-container'>
       <div class='button-container'>
-        <input id='submit_button' type='button' class='item-button' value='SUBMIT'>
+        <input id='submit_button' type='button' class='item-button' value='SAVE'>
       </div>
     </div>
   </body>
